k8s/rails-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: budget-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: budget-app
  template:
    metadata:
      labels:
        app: budget-app
    spec:
      containers:
      - name: budget-app
        image: sajjany/budget-app:latest
        ports:
        - containerPort: 3000
